<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question_eight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="krobertson.howigotstarted.questions.QuestionEight">

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioQuestions"
        android:layout_marginTop="56dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_next"
        android:textColor="@color/white" />

    <RadioGroup
        android:id="@+id/radioQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp">

        <RadioButton
            android:id="@+id/radioAnswerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/question_eight_answer_one" />

        <RadioButton
            android:id="@+id/radioAnswerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_eight_answer_two" />

        <RadioButton
            android:id="@+id/radioAnswerThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_eight_answer_three" />

        <RadioButton
            android:id="@+id/radioAnswerFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_eight_answer_four" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/question_eight"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="8/10"
        android:layout_below="@+id/btn_next"
        android:layout_toRightOf="@+id/radioQuestions"
        android:layout_toEndOf="@+id/radioQuestions"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp" />

</RelativeLayout>
