<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="krobertson.howigotstarted.questions.QuestionTwo">


    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioQuestions"
        android:layout_marginTop="56dp"
        android:onClick="nextButtonClicked"
        android:text="@string/btn_next" />

    <RadioGroup
        android:id="@+id/radioQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="96dp">

        <RadioButton
            android:id="@+id/radioAnswerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_two_answer_one"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioAnswerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_two_answer_two" />

        <RadioButton
            android:text="@string/question_two_answer_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioAnswerThree"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/question_two_answer_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioAnswerFour"
            android:layout_weight="1" />

    </RadioGroup>

    <TextView
        android:text="@string/question_two"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/btn_next"
        android:layout_alignParentBottom="true" />

    <TextView
        android:text="2/10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/btn_next"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginRight="86dp"
        android:layout_marginEnd="86dp" />

</RelativeLayout>
