<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:id="@+id/buttonLoadPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:background="@color/colorAccent"
        android:text="@string/upload_picture"
        android:textColor="@color/white"
        android:layout_below="@+id/user_profile_photo"
        android:layout_centerHorizontal="true"></Button>

    <ImageView
        android:id="@+id/header_cover_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/navigation_header_image"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/profile_circular_border_imageview"
        android:elevation="5dp"
        android:padding="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        android:layout_below="@+id/header_cover_image"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/greeting_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_name"
        android:textColor="#000000"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_below="@+id/buttonLoadPicture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:text="@string/btn_sign_out"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>
